2009-12-08  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/form/form.py:
	Don't perform the DB operation when EditForm has not changed, but commit the transaction.

2009-11-06  Milan Zamazal  <pdm@brailcom.org>

	* defs/menu.py:
	Print related menu items when displaying the editing access rights warning.

2009-11-06  Milan Zamazal  <pdm@brailcom.org>

	* defs/menu.py:
	Display warning when editing access rights belonging to several menu items.

2009-11-03  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/form/list.py:
	New method SideBrowseForm.main_form.

2009-11-03  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	Make pytis_action_rights_foldable db function work even with NULL arguments.

2009-10-29  Milan Zamazal  <pdm@brailcom.org>

	* defs/menu.py:
	Add mistakenly removed lines in menu.py.

2009-12-07  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/data/types_.py:
	* lib/pytis/presentation/field.py:
	Fix permission handling for data objects not derived from `RestrictedData'.

2009-12-07  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/form/form.py:
	Revert "Refuse to commit EditForm if nothing has been changed".
	
	The form transaction may contain uncommitted changes (for example resulting
	from form button actions) even if the form itself (more precisely its
	PresentedRow instance) is unchanged.  We need to be able to commit the form
	anyway in such cases.  PDM thinks that refusing was needed because of column
	right management, but it will need to be fixed otherwise when it appears.

2009-12-07  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/form/list.py:
	Fix XLS export after secret value hiding implementation.

2009-12-07  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/form/inputfield.py:
	Avoid traceback during ListField ctrl initialization (multiform+columns regression).

2009-12-05  Milan Zamazal  <pdm@brailcom.org>

	* tools/genmenu.py:
	Require explicit command line options for any genmenu actions.
