@@ -1926,28 +1926,25 @@ class ListForm(RecordForm, TitledForm, Refreshable):
             for r in range(0,number_rows):
                 if not update(int(float(r)/number_rows*100)):
                     break
+                presented_row = self._table.row(r)
                 for j, (cid, ctype) in enumerate(column_list):
-                    presented_row = self._table.row(r)
                     if isinstance(ctype, pytis.data.Float):
                         s = presented_row.format(cid, secure=True, locale_format=True)
-                    elif isinstance(ctype, pytis.data.Number):
-                        s = presented_row.get(cid, secure=True)
-                    elif isinstance(ctype, pytis.data.Date):
-                        s = presented_row.get(cid, secure=True)
-                        if s:
-                            s = datetime.date(s.year, s.month, s.day)
-                    elif isinstance(ctype, pytis.data.Time):
-                        s = presented_row.get(cid, secure=True)
-                        if s:
-                            s = datetime.time(s.hour, s.minute, int(s.second))
-                    elif isinstance(ctype, pytis.data.DateTime):
-                        s = presented_row.get(cid, secure=True)
-                        if s:
-                            s = s.strftime(pytis.data.DateTime.CZECH_FORMAT)
                     else:
-                        s = presented_row.format(cid, secure=True)
-                        s = ';'.join(s.split('\n'))
-                    if s is not None:                        
+                        value = presented_row.get(cid, secure=True)
+                        if value and value.value() is not None:
+                            v = value.value()
+                            if isinstance(ctype, pytis.data.Date):
+                                s = datetime.date(v.year, v.month, v.day)
+                            elif isinstance(ctype, pytis.data.Time):
+                                s = datetime.time(v.hour, v.minute, int(v.second))
+                            elif isinstance(ctype, pytis.data.DateTime):
+                                s = v.strftime(pytis.data.DateTime.CZECH_FORMAT)
+                            else:
+                                s = ';'.join(presented_row.format(cid, secure=True).split('\n'))
+                        else:
+                            s = None
+                    if s is not None:
                         ws.write(r+1, j, s, column_styles[cid])
             w.save(filename)
         pytis.form.run_dialog(pytis.form.ProgressDialog, _process_table)       
