@@ -1,5 +1,10 @@
 2009-12-08  Tomas Cerha  <cerha@brailcom.org>
 
+	* lib/pytis/form/list.py:
+	Fix XLS export.
+
+2009-12-08  Tomas Cerha  <cerha@brailcom.org>
+
 	* lib/pytis/form/form.py:
 	Don't perform the DB operation when EditForm has not changed, but commit the transaction.
 
